--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "vite": "^5.3.1"
   },
   "dependencies": {
+    "@storybook/addon-docs": "^8.2.5",
+    "@storybook/addon-svelte-csf": "^4.1.4",
     "lodash-es": "^4.17.21",
     "tippy.js": "^6.3.7"
   }
