--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "@storybook/addon-docs": "^8.2.5",
     "@storybook/addon-svelte-csf": "^4.1.4",
+    "dayjs": "^1.11.12",
     "lodash-es": "^4.17.21",
     "tippy.js": "^6.3.7"
   }
