--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "ye-custom-element",
   "private": true,
-  "version": "0.0.2",
+  "version": "0.1.0",
   "type": "module",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
